--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+.card {
+}
+
 img {
   border-radius: 50%;
   height: 45px;
@@ -21,14 +24,14 @@ p {
   padding: 20px 10px 0 20px;
   margin: 20px;
   border-radius: 3000px;
-  box-shadow: 0 0 10px rgb(164, 164, 164);
+  box-shadow: 0 0 10px rgb(133, 133, 133);
   align-items: center;
 }
 
 .sent {
-  background-color: #395dff;
+  background-color: #60b06d;
   color: white;
-  border-top-right-radius: 1000px;
+  border-top-right-radius: 5px;
   flex-direction: row-reverse;
   padding: 20px 20px 0 10px;
   text-align: end;
@@ -38,7 +41,7 @@ p {
 .received {
   border: 1px solid lightgray;
   background-color: #fafafa;
-  border-top-left-radius: 1000px;
+  border-top-right-radius: 5px;
   float: left;
 }
 
