--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
-.card {
+.App header {
+  background-color: #1e1c35;
+  height: 10vh;
+  min-height: 50px;
+  color: white;
+  position: fixed;
+  width: 100%;
+
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 99;
+  padding: 10px;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 img {
@@ -94,4 +110,8 @@ p {
     height: 30px;
     margin-top: -7px;
   }
+}
+
+body {
+  background-image: url("https://github.com/Riuqlav/Chattons/blob/master/cats.jpeg");
 }
