--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,23 @@
-.App header {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+header {
   background-color: #1e1c35;
   height: 10vh;
-  min-height: 50px;
   color: white;
   position: fixed;
   width: 100%;
-
   top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 99;
-  padding: 10px;
+
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 10px;
 }
 
 img {
@@ -32,6 +35,8 @@ p {
   margin-top: 10px;
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 10px;
+
   overflow-wrap: break-word;
 }
 
@@ -45,13 +50,13 @@ p {
 }
 
 .sent {
-  background-color: #60b06d;
+  background-color: hsl(238, 99%, 65%);
   color: white;
   border-top-right-radius: 5px;
   flex-direction: row-reverse;
-  padding: 20px 20px 0 10px;
   text-align: end;
   float: right;
+  padding: 20px 20px 10px 10px;
 }
 
 .received {
@@ -71,13 +76,16 @@ p {
   margin-left: -5px;
   padding: 10px;
   padding-bottom: 30px;
-  background-color: #fafafa;
 }
 
 .msgs {
   margin: 110px 0;
   display: flex;
   flex-direction: column;
+}
+.home {
+  background-image: url("/cats.jpeg");
+  background-size: cover;
 }
 
 @media (max-width: 775px) {
@@ -110,8 +118,4 @@ p {
     height: 30px;
     margin-top: -7px;
   }
-}
-
-body {
-  background-image: url("https://github.com/Riuqlav/Chattons/blob/master/cats.jpeg");
 }
